config template edit

--- a/config.json
+++ b/config.json
@@ -6,19 +6,30 @@
 
 	"d2apiKey"      : "0000000",
 
+	"guild"			: "471020862045290496",
+
+	"roles"         :{
+		"gm"            : "471039282627346432"
+	},
+	
+	"users"         :{
+		"boss"          : "149245139389251584",
+		"bot"           : "543342030768832524"
+	},
+
 	"channels"      :{
-		"admintext"     : "000000000000000000",
-		"suggestions"   : "000000000000000000",
-		"deleted"       : "000000000000000000",
-		"sandbox"       : "000000000000000000",
+		"admintext"     : "760479409886330891",
+		"suggestions"   : "760479409886330891",
+		"deleted"       : "760479409886330891",
+		"sandbox"       : "760479409886330891",
 		
-		"gamenews"      : "000000000000000000",
-		"clannews"      : "000000000000000000",
+		"gamenews"      : "760479409886330891",
+		"clannews"      : "760479409886330891",
 		
-		"entrance"      : "000000000000000000",
-		"flood"         : "000000000000000000",
-		"statistics"    : "000000000000000000",
-		"raids"         : "000000000000000000",
-		"lfg"           : "000000000000000000"
+		"entrance"      : "760479409886330891",
+		"flood"         : "760479409886330891",
+		"statistics"    : "760479409886330891",
+		"raids"         : "760479409886330891",
+		"lfg"           : "760479409886330891"
 	}
 }
