trying to find easy start

--- a/config.json
+++ b/config.json
@@ -7,6 +7,8 @@
 	"d2apiKey"      : "0000000",
 
 	"guild"			: "471020862045290496",
+	"clan1"         : "3055823",
+	"clan2"         : "3858144",
 
 	"roles"         :{
 		"gm"            : "471039282627346432"
