--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Horodep/mamanda#readme",
   "dependencies": {
+    "adm-zip": "^0.5.1",
     "bufferutil": "^4.0.1",
     "discord.js": "^12.4.0",
     "ffmpeg-static": "^3.0.0",
