--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ffmpeg-static": "^3.0.0",
     "jimp": "^0.16.1",
     "node-fetch": "^2.6.1",
+    "node-schedule": "^2.0.0",
     "opusscript": "0.0.6",
     "pg": "^8.5.1",
     "utf-8-validate": "^5.0.2",
